spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__too_many_args.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Expected 2 arguments, got 3
  ┌─ testinput:3:9
  │
3 │     test(true, true, true)
  │         ^^^^^^^^^^^^^^^^^^ Expected 2 arguments


